<resources>
    <string name="app_name">InvoiceTotal</string>
    <string name="subtotal_label">Subtotal</string>
    <string name="discount_percent_label">Discount Percent</string>
    <string name="discount_total_label">Discount Total</string>
    <string name="total_label">Total</string>
    <string name="discount_percent_tv">00%</string>
    <string name="discount_total_tv">$0.00</string>
    <string name="total_tv">$0.00</string>
</resources>
