<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="nguyen.invoicetotal.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/subtotalLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subtotal_label"
            android:textSize="20sp"
            android:textStyle="bold" />
        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <EditText
            android:id="@+id/subtotalET"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/discountPercentLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/discount_percent_label"
            android:textSize="20sp"
            android:textStyle="bold" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/discountPercentTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/discount_percent_tv"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/discountTotalLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/discount_total_label"
            android:textSize="20sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/discountTotalTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/discount_total_tv"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/totalLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_label"
            android:textSize="20sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/totalTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_tv"
            android:textSize="20sp" />
    </LinearLayout>
</LinearLayout>
